# TPRLabs

./: .gitignore  ELECTRE.m  Otchet_po_labamTPR.doc  Pareto.m  ahp_simple.m  linprog.m  mpriority.m  simplex.m
TPR2/: TPRWorkspace  amoeba.m  funcToOptimize.m  pattern.m  simplex.m  true.ps
optim-1.5.3/: NEWS  octave-optim.metainfo.xml
optim-1.5.3/doc/: optim.info  optim.texi  optim.txi
optim-1.5.3/doc/html/: Additional-parameters.html  Common-frontend-options.html  Common-optimization-options.html  Compatibility-wrappers.html  Concept-index.html  Documentation.html  Function-index.html  Gradient-functions.html  Helper-functions.html  LinearRegression.html  Non_002dscalar-parameters.html  Parameter-structures.html  Residual-optimization.html  Scalar-optimization.html  Structure_002dbased-configuration-settings.html  Structure_002dbased-gradients-and-Hessians.html  Structure_002dbased-linear-constraints.html  Structure_002dbased-user-functions.html  XREFadsmax.html  XREFbattery.html  XREFbfgsmin.html  XREFbrent_005fline_005fmin.html  XREFcdiff.html  XREFcg_005fmin.html  XREFcpiv_005fbard.html  XREFcurvefit_005fstat.html  XREFde_005fmin.html  XREFderiv.html  XREFdfpdp.html  XREFexpfit.html  XREFfmins.html  XREFgjp.html  XREFjacobs.html  XREFleasqr.html  XREFline_005fmin.html  XREFlinprog.html  XREFlsqcurvefit.html  XREFlsqlin.html  XREFlsqnonlin.html  XREFmdsmax.html  (+67 more)
optim-1.5.3/inst/: curvefit_stat.m  lsqcurvefit.m  lsqlin.m  lsqnonlin.m  nlinfit.m  nonlin_curvefit.m  nonlin_min.m  nonlin_residmin.m  optim_problems.m  samin_example.m  wpolyfit.m
optim-1.5.3/inst/private/: __dfdp__.m  __lm_feasible__.m  __lm_svd__.m  __nonlin_residmin__.m  __optimget_parallel_local__.m  __optimget_parallel_net__.m  __residmin_stat__.m  __samin__.m  __siman__.m
optim-1.5.3/src/: Makefile.in  __bfgsmin.cc  __disna_optim__.cc  config.h.in  configure  configure.ac  error-helpers.cc  error-helpers.h  munge-texi.pl  numgradient.cc  numhessian.cc  oct-alt-includes.h  samin.cc
